--- a/index.html
+++ b/index.html
@@ -61,7 +61,60 @@
                 <img src="./image/kids.jpg"/>
             </div>
         </div>
+
+        <div class="Questions p-10">
+            <h1>Frequently Asked Questions.</h1>
+            <div class="p-20 quest-block">
+                <h1>What is Netflix?</h1>
+            </div>
+            <div class="p-20 quest-block">
+                <h1>How much does Netflix cost?</h1>
+            </div>
+            <div class="p-20 quest-block">
+                <h1>Where can i watch?</h1>
+            </div>
+            <div class="p-20 quest-block">
+                <h1>How do i cancel?</h1>
+            </div>
+            <div class="quest-foot">
+                <p>Ready to watch? Enter your email to create or restart your membership.</p>
+                <div>
+                    <input type="text" class="p-10 inp no-otl"
+                    placeholder="Email Address"/>
+                    <button class="p-10 no-otl get-btn">Get Started</button>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div>
+            <ul>
+                <li>FAQ</li>
+                <li>Media Center</li>
+                <li>Way to watch</li>
+                <li>Cookie Preferences</li>
+                <li>Speed Test</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Help Center</li>
+                <li>Investor relations</li>
+                <li>term of Use</li>
+                <li>Corporate Information</li>
+                <li>Legal Notice</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Accounts</li>
+                <li>Job</li>
+                <li>Privacy</li>
+                <li>Contact us</li>
+                <li>Only on Netflix</li>
+            </ul>
+        </div>
+    </footer>
     <script src="main.js"></script>
 </body>
 
